extract LWIP_ERR_T + typedefs from espressif SDK's lwip1.4 + do not store anymore these include files, they are taken from local SDK

--- a/Makefile.arduino
+++ b/Makefile.arduino
@@ -5,6 +5,7 @@ LWIP_LIB=liblwip2.a
 	make -f makefiles/Makefile.build-lwip2 \
 			target=arduino \
 			SDK=$(abspath ../..) \
+			LWIP_ESP=$(abspath ../../lwip/include) \
 			LWIP_LIB=$(LWIP_LIB) \
 			LWIP_LIB_RELEASE=../../lib/liblwip2.a \
 			LWIP_INCLUDES_RELEASE=../include \
