--- a/makefiles/Makefile.build-lwip2
+++ b/makefiles/Makefile.build-lwip2
@@ -16,7 +16,16 @@ IRAM	+= sntp_time_inc sntp_get_current_timestamp
 IRAM	+= millis
 ####################################
 
-all: $(LWIP_LIB_RELEASE)
+all: lwiperrt $(LWIP_LIB_RELEASE)
+
+lwiperrt: glue-lwip/lwip-err-t.h
+
+glue-lwip/lwip-err-t.h: $(LWIP_ESP)/arch/cc.h
+	( \
+	echo "// script-generated, extracted from espressif SDK's lwIP arch/cc.h"; \
+	echo "#define LWIP_NO_STDINT_H 1"; \
+	grep -e LWIP_ERR_T -e ^typedef $< \
+	) > $@
 
 $(LWIP_LIB_RELEASE): $(LWIP_LIB)
 	@# according to eagle.app.v6.common.ld:
@@ -40,11 +49,11 @@ section-show:
 		echo  $$i \\t\\t `$(OD) -t $(LWIP_LIB_RELEASE) | grep " F .* $${i}$$"`; \
 	done; true
 
-install: $(LWIP_LIB_RELEASE)
+install: lwiperrt $(LWIP_LIB_RELEASE)
 	rm -rf $(LWIP_INCLUDES_RELEASE)
 	mkdir -p $(LWIP_INCLUDES_RELEASE)
 	cp -a lwip2-src/src/include/* $(LWIP_INCLUDES_RELEASE)
-	cp -a glue/gluedebug.h glue-lwip/lwip-git-hash.h glue-lwip/arch $(LWIP_INCLUDES_RELEASE)
+	cp -a glue/gluedebug.h glue-lwip/lwip-git-hash.h glue-lwip/lwip-err-t.h glue-lwip/arch $(LWIP_INCLUDES_RELEASE)
 	echo "// this file will be overwritten upon lwip2 rebuild" > $(LWIP_INCLUDES_RELEASE)/lwipopts.h
 	echo "#ifndef __CUSTOM_EXTRA_DEFINES__" >> $(LWIP_INCLUDES_RELEASE)/lwipopts.h
 	echo "#define __CUSTOM_EXTRA_DEFINES__" >> $(LWIP_INCLUDES_RELEASE)/lwipopts.h
