--- a/makefiles/Makefile.defs
+++ b/makefiles/Makefile.defs
@@ -1,10 +1,17 @@
 
+# (0,0):g++ otherwise gcc
+ifeq (1,0)
+CC			= $(TOOLS)g++
+BUILD_FLAGS 		+= -std=c++11 -DTRUE=true -DFALSE=false
+else
 CC			= $(TOOLS)gcc
+BUILD_FLAGS 		+= -std=gnu99
+endif
+
 AR			= $(TOOLS)ar
 OC			= $(TOOLS)objcopy
 OD			= $(TOOLS)objdump
 
 BUILD			= build
-BUILD_FLAGS = -Wall -Wextra -std=c99 -c -Os -g -Wpointer-arith -Wl,-EL -fno-inline-functions -nostdlib -mlongcalls -mtext-section-literals -falign-functions=4 -MMD -std=gnu99 -ffunction-sections -fdata-sections
+BUILD_FLAGS += -Wall -Wextra -c -Os -g -Wpointer-arith -Wl,-EL -fno-inline-functions -nostdlib -mlongcalls -mtext-section-literals -falign-functions=4 -MMD -ffunction-sections -fdata-sections
 BUILD_DEFINES = -D__ets__ -DICACHE_FLASH -U__STRICT_ANSI__ -DLWIP_OPEN_SRC -DLWIP_BUILD -DUSE_OPTIMIZE_PRINTF -DTARGET=$(target)
-
