--- a/makefiles/Makefile.glue
+++ b/makefiles/Makefile.glue
@@ -9,7 +9,7 @@ OBJ = \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard glue/*.c)) \
 	$(patsubst %.c,$(BUILD)/glue-lwip/%.o,$(GLUE_LWIP)) \
 
-BUILD_INCLUDES = -I$(BUILD) -Iglue -Iglue-lwip -Ilwip2-src/src/include -I$(SDK)/include
+BUILD_INCLUDES = -I$(BUILD) -Iglue -Iglue-lwip -Iglue-lwip/$(target) -Ilwip2-src/src/include -I$(SDK)/include
 
 include makefiles/Makefile.defs
 include makefiles/Makefile.rules
