--- a/makefiles/Makefile.lwip2
+++ b/makefiles/Makefile.lwip2
@@ -9,7 +9,7 @@ OBJ = \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard api/*.c)) \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard apps/sntp/*.c)) \
 
-BUILD_INCLUDES = -I$(BUILD) -I$(SDK)/include -Iinclude -I../../glue -I../../glue-lwip
+BUILD_INCLUDES = -I$(BUILD) -I$(SDK)/include -Iinclude -I../../glue -I../../glue-lwip -I../../glue-lwip/$(target)
 
 all: $(LWIP_LIB)
 
