--- a/makefiles/Makefile.lwip2
+++ b/makefiles/Makefile.lwip2
@@ -8,8 +8,11 @@ OBJ = \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard core/ipv6/*.c)) \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard api/*.c)) \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard apps/sntp/*.c)) \
+#	$(subst ../../lwip2-contrib-src/,contrib/, \
+#		$(patsubst %.c,$(BUILD)/%.o,$(wildcard ../../lwip2-contrib-src/apps/ping/*.c)))
 
 BUILD_INCLUDES = -I$(BUILD) -I$(SDK)/include -Iinclude -I../../glue -I../../glue-lwip -I../../glue-lwip/$(target)
+#BUILD_INCLUDES += -I../../lwip2-contrib-src/apps/ping
 
 all: apps/sntp/sntp.c.patch $(LWIP_LIB)
 
@@ -20,10 +23,6 @@ apps/sntp/sntp.c.patch:
 	@echo "\n\n\n#if LWIP_UDP\nvoid sntp_force_request (void)\n{\n\tsntp_request(NULL);\n}\n#endif\n" >> apps/sntp/sntp.c
 	touch apps/sntp/sntp.c.patch
 
--include $(BUILD)/netif/*.d
--include $(BUILD)/core/*.d
--include $(BUILD)/core/ipv4/*.d
--include $(BUILD)/core/ipv6/*.d
--include $(BUILD)/api/*.d
--include $(BUILD)/apps/sntp/*.d
-
+-include $(BUILD)/*/*.d
+-include $(BUILD)/*/*/*.d
+-include $(BUILD)/*/*/*/*.d
