--- a/makefiles/Makefile.build-lwip2
+++ b/makefiles/Makefile.build-lwip2
@@ -39,9 +39,9 @@ $(LWIP_LIB_RELEASE): $(LWIP_LIB)
 
 .PHONY: $(LWIP_LIB)
 $(LWIP_LIB):
-	make -f makefiles/Makefile.glue-esp
-	make -f makefiles/Makefile.glue target=$(target)
-	make -C lwip2-src/src -f ../../makefiles/Makefile.lwip2 BUILD=../../$(BUILD) LWIP_LIB=../../$(LWIP_LIB)
+	make -f makefiles/Makefile.glue-esp BUILD=$(BUILD) TCP_MSS=$(TCP_MSS)
+	make -f makefiles/Makefile.glue target=$(target) BUILD=$(BUILD) TCP_MSS=$(TCP_MSS)
+	make -C lwip2-src/src -f ../../makefiles/Makefile.lwip2 BUILD=../../$(BUILD) LWIP_LIB=../../$(LWIP_LIB) TCP_MSS=$(TCP_MSS)
 
 section-show:
 	@for i in $(IRAM); do \
@@ -63,4 +63,4 @@ install: auto $(LWIP_LIB_RELEASE)
 	touch $(LWIP_INCLUDES_RELEASE)/espconn.h
 
 clean:
-	rm -rf build $(LWIP_LIB)
+	rm -rf $(BUILD) $(LWIP_LIB)
