lwip-2.1.0 IPv6-enabled (#21) (open)
update to lwIP-2.1.0
SACK-out: option
IPv6: option
fragmentation / reassembly: option

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.local/
 build/
 build-*/
 glue-lwip/lwip-err-t.h
@@ -5,3 +6,4 @@ glue-lwip/lwip-git-hash.h
 liblwip2.a
 liblwip2_*.a
 liblwip2-*.a
+liblwip6-*.a
