--- a/makefiles/Makefile.lwip2
+++ b/makefiles/Makefile.lwip2
@@ -8,6 +8,7 @@ OBJ = \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard core/ipv6/*.c)) \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard api/*.c)) \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard apps/sntp/*.c)) \
+	$(patsubst %.c,$(BUILD)/%.o,$(wildcard apps/mdns/*.c)) \
 #	$(subst ../../lwip2-contrib-src/,contrib/, \
 #		$(patsubst %.c,$(BUILD)/%.o,$(wildcard ../../lwip2-contrib-src/apps/ping/*.c)))
 
@@ -19,9 +20,9 @@ all: patches $(LWIP_LIB)
 patches: .patched
 
 .patched:
-	patch -d .. -p1 < ../../patches/time-wait.patch
+	for p in ../../patches/*.patch; do patch -d .. -p1 < $$p; done
 ifeq ($(target),open)
-	patch -d .. -p1 < ../../patches/sdk-mem-macros.patch
+	patch -d .. -p1 < ../../patches/open/sdk-mem-macros.patch
 endif
 	touch .patched
 
