--- a/makefiles/Makefile.glue
+++ b/makefiles/Makefile.glue
@@ -3,12 +3,12 @@
 
 GLUE_LWIP = lwip-git.c
 GLUE_LWIP += esp-dhcpserver.c
-#GLUE_LWIP += esp-ping.c
+GLUE_LWIP += esp-ping.c
 ifneq ($(target),arduino)
 GLUE_LWIP += esp-time.c
 GLUE_LWIP += esp-millis.c
 endif
-#GLUE_LWIP += espconn.c espconn_buf.c espconn_tcp.c espconn_udp.c
+GLUE_LWIP += espconn.c espconn_buf.c espconn_tcp.c espconn_udp.c
 
 OBJ = \
 	$(patsubst %.c,$(BUILD)/%.o,$(wildcard glue/*.c)) \
