--- a/Makefile.open
+++ b/Makefile.open
@@ -12,6 +12,7 @@ LWIP_INCLUDES_RELEASE=$(SDK)/include/lwip2
 	make -f makefiles/Makefile.build-lwip2 \
 			target=esp-open-sdk \
 			SDK=$(SDK) \
+			LWIP_ESP=$(abspath include-esp) \
 			LWIP_LIB=liblwip2.a \
 			LWIP_LIB_RELEASE=$(LWIP_LIB_RELEASE) \
 			LWIP_INCLUDES_RELEASE=$(LWIP_INCLUDES_RELEASE) \
