open: fix target to make open directory for lwipopts

--- a/Makefile.open
+++ b/Makefile.open
@@ -10,7 +10,7 @@ LWIP_INCLUDES_RELEASE=$(SDK)/include/lwip2
 
 %:
 	make -f makefiles/Makefile.build-lwip2 \
-			target=esp-open-sdk \
+			target=open \
 			SDK=$(SDK) \
 			LWIP_ESP=$(abspath include-esp) \
 			LWIP_LIB=liblwip2.a \
