--- a/makefiles/Makefile.build-lwip2
+++ b/makefiles/Makefile.build-lwip2
@@ -69,7 +69,9 @@ install: $(AUTO) $(LWIP_LIB_RELEASE)
 	echo "#endif" >> $(LWIP_INCLUDES_RELEASE)/lwipopts.h
 	cat glue-lwip/$(target)/lwipopts.h >> $(LWIP_INCLUDES_RELEASE)/lwipopts.h
 	echo "warning: this directory is re/over/written from lwip2 builder upon lwip2 rebuild" > $(LWIP_INCLUDES_RELEASE)/README.md
+ifneq ($(target),open)
 	touch $(LWIP_INCLUDES_RELEASE)/espconn.h
+endif
 
 clean:
 	rm -rf $(BUILD) $(LWIP_LIB) $(AUTO)
